@@ -1,5 +1,7 @@
 Verion 1.5.4
 * Expose function determinelastmark5bframeoffset()
+* m5d, m5spec: --version option
+* m5d: fix use of offset for short reads (assumes file starts on a frame header)
 
 Verion 1.5.3
 * Integer rounding error in m5slice
